src/App/blocks/Speakers/Speakers.st.css
:import {
	-st-from: '@flexis/ui/stylable/rel';
	-st-default: rel;
}

:import {
	-st-from: '~/components/variables.st.css';
	-st-named:
		sizeScreenMdMax,
		sizeGap,
		sizeGapLg;
}

:import {
	-st-from: '~/components/Section/Section.st.css';
	-st-named: center;
}

.root .center {
	padding-top: value(sizeGapLg);
	padding-bottom: value(sizeGapLg);
}

.root ul {
	display: flex;
	flex-wrap: wrap;
	margin: 0;
	padding: 0;
	list-style: none;
}

.root li {
	flex: 1 1 25%;
	margin: 0 value(sizeGap) value(sizeGapLg) 0;
}

.group {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

@media (max-width: value(sizeScreenMdMax)) {

	/* stylelint-disable a11y/no-display-none */
	.button {
		display: none;
	}/* stylelint-enable */
}

